--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -65,13 +65,13 @@
 
 	*/
 
-	@media screen and (max-width: 480px) {
+	/*@media screen and (max-width: 480px) {
 
 		html, body {
 			min-width: 320px;
 		}
 
-	}
+	}*/
 
 	body.is-loading-0 *, body.is-loading-0 *:before, body.is-loading-0 *:after {
 		-moz-animation: none !important;
@@ -149,7 +149,7 @@
 	}
 
 	p {
-		margin: 0 0 1.25em 0;
+		margin: 0 0 0.25em 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -821,7 +821,7 @@
 
 		#header p {
 			font-size: 0.8em;
-			font-weight: 500;
+			font-weight: 750
 		}
 
 /* Footer */
@@ -862,7 +862,8 @@
 
 		#thumbnails article {
 			position: relative;
-			background: #101010;
+			width: 100%;
+			background: #EEEEEE;
 			outline: 0;
 		}
 
@@ -870,7 +871,7 @@
 				-webkit-tap-highlight-color: transparent;
 				display: block;
 				position: relative;
-				border: 0;
+				margin: 1px;
 				outline: 0;
 			}
 
